decal-macros/tests/ui/fail/top_level_sub_scene.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Scene(0)
    };
}
